Fixed text overflow

--- a/cmd/server/public/assets/css/app.css
+++ b/cmd/server/public/assets/css/app.css
@@ -11,6 +11,12 @@
 .alert-transparent a#long-url {
     text-decoration: none;
     color: #000000;
+
+    width: 97%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
 }
 
 .alert-transparent a#short-url {
